# lol-damage-calculator

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  allgamedata.json  allgamedata2.json  ap.json  calc.js  common.css  components.js  deploy.sh  icons.css  import_stage1.js  import_stage1_wikia.py  import_stage2.js  import_stage2.py  import_stage3.mjs  index.html  items.css  jsconfig.json  league_data.js  league_items.js  main.css  matchreplace.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  ui.js  vite.config.ts.timestamp-1711982119718-1bd4238c19785.mjs  vite.config.ts.timestamp-1714535248154-84df0f09755d9.mjs  vue.config.js
.json/: ChampionList.json  Module_ChampionData.schema.json  version.json
buildtools/: Maps.txt  champion.schema.json  data_fetch.mjs  data_fetch_validate.mjs  fetch_json.mjs  fetch_utils.mjs  import_stage1.js  import_stage3.mjs  items_fetch.mjs  jsonvalidtests.js  live_wiki_fetch.mts  live_wiki_fetch.mts.old  matchreplace.mjs  moo_test.mjs  pass1.schema.json  skill.schema.json  test_import_1.js  testjson.json  testjson22.json  tokenizer.js  tokenizer.test.js  wiki_itembox.html  wiki_rip.mjs
buildtools-rs/: Cargo.toml
buildtools-rs/src/: ItemEffectModels.rs  cdragon.rs  champions.rs  datadragon.rs  effect_models.rs  fetch.rs  item.gen.ts  item_effect_models.rs  item_models.rs  items.json  items.rs  leaguewiki.rs  main.rs  runes.rs
buildtools-rs/src/remote/: cdragon.rs  datadragon.rs  fetch.rs  leaguewiki.rs  live_champion.rs  mod.rs
dev/: ItemModelBuilder.ts  LeagueWiki.ts  OverwriteChampions.ts  OverwritePerks.ts  OverwriteSkills.ts  PerkScripts.ts  WikiChampListFetch.ts  WikiItem.ts  build_champions.ts  build_items.ts  leveling.ts  (+14 more)
(+969 files in other folders)
