[package]
name = "buildtools-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.11.18", features = ["blocking"]  }
scraper = "0.17.1"
serde_json = "1.0.102"
json = "0.12.4"
lazy_static = "1.4.0"
serde = {version = "1.0.171",  features = ["derive"]}
json5 = "0.4.1"
filenamify = "0.1.0"
ego-tree = "0.6.2"
regex = "1.9.1"
