[package]
name = "buildtools-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.12.2", features = ["blocking"]  }
scraper = "0.19.0"
serde_json = "1.0.114"
json = "0.12.4"
serde = {version = "1.0.197",  features = ["derive"]}
json5 = "0.4.1"
filenamify = "0.1.0"
ego-tree = "0.6.2"
regex = "1.10.3"
clap = { version = "4.5.2", features = ["derive"] }
once_cell = "1.19.0"
thiserror = "1.0.58"
