[package]
name = "buildtools-rs"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest =  { version = "0.12.12", features = ["blocking"]  }
scraper = "0.22.0"
serde_json = "1.0.135"
# json = "0.12.4"
serde = {version = "1.0.217",  features = ["derive"]}
json5 = "0.4.1"
# filenamify = "0.1.2"
# ego-tree = "0.10.0"
regex = "1.11.1"
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.20.2"
thiserror = "2.0.11"
chrono = "0.4.37"
url-escape = "0.1.1"
